--- a/examples/04-lists.html
+++ b/examples/04-lists.html
@@ -1,44 +1,43 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>List Example</title>
   </head>
 
   <body>
-
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ul>
-
-  <ol type="i">
-    <li>Do this first</li>
-    <li>Do this next</li>
-    <li>Do this next</li>
-    <li>Do this next</li>
-    <li>Do this next</li>
-  </ol>
-
-  <dl>
-    <dt>Term</dt>
-    <dd>Description of the term</dd>
-    <dt>Term</dt>
-    <dd>Description of the term</dd>
-  </dl>
-
-<ul>
-  <li>Main item one
     <ul>
-      <li>Sub-item A</li>
-      <li>Sub-item B</li>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
     </ul>
-  </li>
-  <li>Main item two</li>
-</ul>
-  
+
+    <ol type="i">
+      <li>Do this first</li>
+      <li>Do this next</li>
+      <li>Do this next</li>
+      <li>Do this next</li>
+      <li>Do this next</li>
+    </ol>
+
+    <dl>
+      <dt>Term</dt>
+      <dd>Description of the term</dd>
+      <dt>Term</dt>
+      <dd>Description of the term</dd>
+    </dl>
+
+    <ul>
+      <li>
+        Main item one
+        <ul>
+          <li>Sub-item A</li>
+          <li>Sub-item B</li>
+        </ul>
+      </li>
+      <li>Main item two</li>
+    </ul>
   </body>
 </html>
