--- a/examples/05-links.html
+++ b/examples/05-links.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Link Example</title>
@@ -11,7 +11,7 @@
     <h1 title="A header" id="heading1">Header</h1>
 
     <a href="https://chatgpt.com" title="This will solve all your problems">ChatGPT</a>
-    
+
     <a href="05-links-target.html" title="This will go to another page">A second page</a>
   </body>
 </html>
