--- a/examples/12-forms.html
+++ b/examples/12-forms.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Form Example</title>
@@ -9,20 +9,18 @@
 
   <body>
     <form>
-      <p>
-      <label for="first">First name:</label><input type="text" name="first" id="first">
-      </p>
-      <p>
-      <label for="email">Email:</label><input type="email" name="email" id="email">
-      </p>
-      <p>
-      <label for="password">Password:</label><input type="password" name="password" id="password">
-      <p/>
-      <p>
-      <label>Can I have your data?<input type="checkbox" name="privacy"></label>
-      <p>
-      <input type="submit" />
+      <p><label for="first">First name:</label><input type="text" name="first" id="first" /></p>
+      <p><label for="email">Email:</label><input type="email" name="email" id="email" /></p>
+      <p><label for="password">Password:</label><input type="password" name="password" id="password" /></p>
 
+      <p />
+      <p>
+        <label>Can I have your data?<input type="checkbox" name="privacy" /></label>
+      </p>
+
+      <p>
+        <input type="submit" />
+      </p>
     </form>
   </body>
 </html>
