--- a/examples/15-styles.html
+++ b/examples/15-styles.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Simple CSS Example</title>
-    <link rel="stylesheet" href="15-style.css">
+    <link rel="stylesheet" href="15-style.css" />
   </head>
 
   <body>
