--- a/examples/18-basic-js.html
+++ b/examples/18-basic-js.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>JS Counter Example</title>
   </head>
 
@@ -10,13 +10,13 @@
       <button id="button">1</button>
     </main>
     <script>
-    button.style.color = "red"
-    
-    console.log(document)
+      button.style.color = 'red'
 
-    button.addEventListener("click", (event) => {
-      event.target.textContent = +event.target.textContent + 1
-    })
+      console.log(document)
+
+      button.addEventListener('click', event => {
+        event.target.textContent = +event.target.textContent + 1
+      })
     </script>
   </body>
 </html>
