--- a/examples/23-dom.html
+++ b/examples/23-dom.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Document Object Model</title>
     <style>
-    header p {
-      display: inline;
-    }
+      header p {
+        display: inline;
+      }
     </style>
   </head>
 
@@ -24,31 +24,31 @@
       <p>3</p>
     </main>
     <script>
-    console.log(document)
+      console.log(document)
 
-    document.title = "DOM"
+      document.title = 'DOM'
 
-    console.log(document.getElementById("paragraph"))
-    console.log(document.querySelector("#paragraph"))
-    console.log(document.querySelector("p"))
-    console.log(document.querySelectorAll("p"))
-    console.log(document.querySelectorAll("#color"))
+      console.log(document.getElementById('paragraph'))
+      console.log(document.querySelector('#paragraph'))
+      console.log(document.querySelector('p'))
+      console.log(document.querySelectorAll('p'))
+      console.log(document.querySelectorAll('#color'))
 
-    const main = document.querySelector("main")
-    //const paras = main.querySelectorAll("p")
-    const paras = document.querySelectorAll("main p")
-    
-    const p = document.querySelector("main p")
-    p.textContent = "The first paragraph"
+      const main = document.querySelector('main')
+      //const paras = main.querySelectorAll("p")
+      const paras = document.querySelectorAll('main p')
 
-    const username = "<h1>Jon</h1>"
-    
-    main.textContent = `${username}`
+      const p = document.querySelector('main p')
+      p.textContent = 'The first paragraph'
 
-    const para = document.createElement("p")
-    para.textContent = "My new paragraph"
+      const username = '<h1>Jon</h1>'
 
-    main.appendChild(para)
+      main.textContent = `${username}`
+
+      const para = document.createElement('p')
+      para.textContent = 'My new paragraph'
+
+      main.appendChild(para)
     </script>
   </body>
 </html>
