--- a/examples/26-events.html
+++ b/examples/26-events.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Events</title>
@@ -9,38 +9,34 @@
   </head>
 
   <body>
-    <button id="first-button" onclick="console.log('Hello!');">
-      Click Me
-    </button>
+    <button id="first-button" onclick="console.log('Hello!');">Click Me</button>
 
     <button id="my-button">Another button</button>
     <button id="color-changer">Change color</button>
 
-    <p>
-    The quick brown <em>fox</em> jumped <span>over</span> the lazy dog.
-    </p>
+    <p>The quick brown <em>fox</em> jumped <span>over</span> the lazy dog.</p>
     <script>
-    document.querySelector("#my-button").onclick = console.log
-    document.querySelectorAll("button").forEach(button => {
-      console.log(button)
-      button.addEventListener('click', event => {  
-        const color = `rgb(
-          ${Math.random()*255}, 
-          ${Math.random()*255}, 
-          ${Math.random()*255})`
-        event.target.style.color = color
-        document.body.style.background = color
+      document.querySelector('#my-button').onclick = console.log
+      document.querySelectorAll('button').forEach(button => {
+        console.log(button)
+        button.addEventListener('click', event => {
+          const color = `rgb(
+          ${Math.random() * 255}, 
+          ${Math.random() * 255}, 
+          ${Math.random() * 255})`
+          event.target.style.color = color
+          document.body.style.background = color
+        })
       })
-    })
 
-    document.querySelector("p").addEventListener('click', e => {
-      console.log("Clicked", e.target)
-      const color = `rgb(
-        ${Math.random()*255}, 
-        ${Math.random()*255}, 
-        ${Math.random()*255})`
-      e.target.style.color = color
-    })
+      document.querySelector('p').addEventListener('click', e => {
+        console.log('Clicked', e.target)
+        const color = `rgb(
+        ${Math.random() * 255}, 
+        ${Math.random() * 255}, 
+        ${Math.random() * 255})`
+        e.target.style.color = color
+      })
     </script>
   </body>
 </html>
