--- a/examples/js.html
+++ b/examples/js.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title></title>
@@ -10,9 +10,9 @@
 
   <body>
     <script>
-    a = 2
-    
-    console.log(2 + a) 
+      a = 2
+
+      console.log(2 + a)
     </script>
   </body>
 </html>
