--- a/examples/03-minimal-doc.html
+++ b/examples/03-minimal-doc.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 
     <title>Page Title</title>
   </head>
 
-  <body>
-  </body>
+  <body></body>
 </html>
