--- a/examples/07-images.html
+++ b/examples/07-images.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Image Example</title>
@@ -9,12 +9,11 @@
 
   <body>
     <figure>
-    <img 
-      src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Pin_tumbler_with_key.svg/576px-Pin_tumbler_with_key.svg.png"
-      alt="A pin tumbler lock with key"
-      height="200"
-    >
-    <figcaption><p>A key matched to a pin tumbler lock</p></figcaption>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Pin_tumbler_with_key.svg/576px-Pin_tumbler_with_key.svg.png"
+        alt="A pin tumbler lock with key"
+        height="200" />
+      <figcaption><p>A key matched to a pin tumbler lock</p></figcaption>
     </figure>
 
     <picture>
@@ -22,9 +21,12 @@
         srcset="
           https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/2560px-Saturn_during_Equinox.jpg 2560w,
           https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/1024px-Saturn_during_Equinox.jpg 1024w,
-          https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/330px-Saturn_during_Equinox.jpg 330w"
-        sizes="(max-width: 330px) 330px, (max-width: 1024px) 1024px, 2560px">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/960px-Saturn_during_Equinox.jpg" alt="Saturn during equinox">
+          https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/330px-Saturn_during_Equinox.jpg   330w
+        "
+        sizes="(max-width: 330px) 330px, (max-width: 1024px) 1024px, 2560px" />
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/960px-Saturn_during_Equinox.jpg"
+        alt="Saturn during equinox" />
     </picture>
   </body>
 </html>
