--- a/examples/09-sections.html
+++ b/examples/09-sections.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Semantic Sectioning</title>
   </head>
 
-  <body>
-  </body>
+  <body></body>
 </html>
