--- a/examples/10-multimedia.html
+++ b/examples/10-multimedia.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Multimedia Examples</title>
   </head>
 
   <body>
-    <video src="https://upload.wikimedia.org/wikipedia/commons/transcoded/5/5a/Hubble_Maps_Jupiter_in_4k_Ultra_HD.webm/Hubble_Maps_Jupiter_in_4k_Ultra_HD.webm.240p.vp9.webm" controls autoplay muted></video>
+    <video
+      src="https://upload.wikimedia.org/wikipedia/commons/transcoded/5/5a/Hubble_Maps_Jupiter_in_4k_Ultra_HD.webm/Hubble_Maps_Jupiter_in_4k_Ultra_HD.webm.240p.vp9.webm"
+      controls
+      autoplay
+      muted></video>
 
     <audio src="https://upload.wikimedia.org/wikipedia/commons/1/1e/HTTP_cookie.ogg" controls></audio>
   </body>
