--- a/examples/14-dice-roller.html
+++ b/examples/14-dice-roller.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title></title>
@@ -10,14 +10,15 @@
 
   <body>
     <form action="/" method="get">
-      <label>Die Size
-      <select name="size" autocomplete=on>
-        <option value="6">d6</option>
-        <option value="8">d8</option>
-        <option value="10">d10</option>
-        <option value="12">d12</option>
-        <option value="20">d20</option>
-      </select>
+      <label
+        >Die Size
+        <select name="size" autocomplete="on">
+          <option value="6">d6</option>
+          <option value="8">d8</option>
+          <option value="10">d10</option>
+          <option value="12">d12</option>
+          <option value="20">d20</option>
+        </select>
       </label>
       <input type="submit" value="Roll" />
     </form>
