--- a/examples/28-network.html
+++ b/examples/28-network.html
@@ -1,50 +1,49 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="data:;base64,=">
-    
+    <link rel="icon" href="data:;base64,=" />
+
     <title></title>
     <style></style>
   </head>
 
   <body>
-    <main>
-    </main>
+    <main></main>
     <script>
-    // Note: `fetch` requires a local webserver (e.g. python3 -m http.server)
-    fetch('hello.html')
-      .then(response => {
-        console.log(response.ok, response.status)
-        return response.blob()
-      })
-      .then(blob => blob.text())
-      .then(text => {
-        console.log(text)
-        document.querySelector('main').innerHTML = text
-      })
+      // Note: `fetch` requires a local webserver (e.g. python3 -m http.server)
+      fetch('hello.html')
+        .then(response => {
+          console.log(response.ok, response.status)
+          return response.blob()
+        })
+        .then(blob => blob.text())
+        .then(text => {
+          console.log(text)
+          document.querySelector('main').innerHTML = text
+        })
 
-    async function load() {
-      try {
-        const response = await fetch('hello.html')
-        console.log(response)
-        const text = await response.text()
-        console.log(text)
-      } catch (error) {
-        console.error("ERROR: ", error)
+      async function load() {
+        try {
+          const response = await fetch('hello.html')
+          console.log(response)
+          const text = await response.text()
+          console.log(text)
+        } catch (error) {
+          console.error('ERROR: ', error)
+        }
+
+        getFruits()
       }
 
-      getFruits()
-    }
+      async function getFruits() {
+        const response = await fetch('api/fruits.json')
+        const json = await response.json()
+        console.log(json)
+      }
 
-    async function getFruits() {
-      const response = await fetch('api/fruits.json')
-      const json = await response.json()
-      console.log(json)
-    }
-
-    addEventListener('load', load)
+      addEventListener('load', load)
     </script>
   </body>
 </html>
