Add promise error handling

--- a/examples/28-network.html
+++ b/examples/28-network.html
@@ -18,6 +18,7 @@
           console.log(response.ok, response.status)
           return response.blob()
         })
+        .catch(e => console.error("Error: ", e))
         .then(blob => blob.text())
         .then(text => {
           console.log(text)
