--- a/examples/28-network.html
+++ b/examples/28-network.html
@@ -13,6 +13,37 @@
     <main></main>
     <script>
       // Note: `fetch` requires a local webserver (e.g. python3 -m http.server)
+      fetch("hello.html")
+        .then(res => {
+          //console.log(res.ok, res.status)
+          return res.text()
+        })
+        .then(text => {
+          //console.log(text)
+          //document.querySelector('main').innerHTML = text
+        })
+
+      fetch("/api/fruits.json")
+        .then(res => {
+          //console.log(res.ok, res.status)
+          return res.json()
+        })
+        .catch(e => console.error("Error: ", e))
+        .then(data => {
+          //console.log(data)
+          document.querySelector('main').innerHTML = 
+            `<ul>${data.map(f => '<li>' + f)}</ul>`
+        })
+
+      async function load() {
+        const response = await fetch('hello.html')
+        console.log(response)
+
+        const text = await response.text()
+        console.log(text)
+      }
+
+      addEventListener('load', load)
     </script>
   </body>
 </html>
