--- a/examples/29-json.html
+++ b/examples/29-json.html
@@ -9,6 +9,40 @@
   </head>
 
   <body>
-    <script></script>
+    <main>
+      <article>
+        <h2>Dice Rolls</h2>
+        <ul>
+        </ul>
+      </article>
+    </main>
+    <script>
+    async function init() {
+      const res = await fetch("rolls")
+      const rolls = await res.json()
+      console.log(rolls)
+
+      rolls.forEach(roll => {
+        const li = document.createElement('li')
+        li.textContent = roll
+        document.querySelector('ul').appendChild(li)
+      })
+
+      const request = new Request("sum", {
+        method: "POST",
+        body: JSON.stringify(rolls),
+        headers: new Headers({'content-type': 'application/json'}),
+      })
+
+      const sumRes = await fetch(request)
+      const total = await sumRes.json()
+
+      const li = document.createElement('li')
+      li.textContent = "Total: " + total.sum
+      document.querySelector('ul').appendChild(li)
+    }
+
+    addEventListener('load', init)
+    </script>
   </body>
 </html>
