Add margin collapse example

--- a/examples/31-box.html
+++ b/examples/31-box.html
@@ -17,6 +17,10 @@
       border: 5px solid black;
       background-color: lightgray;
     }
+
+    h1, p {
+      margin-block: 1rem;
+    }
     </style>
   </head>
 
@@ -24,6 +28,9 @@
     <main>
       <section>
         <h1>Content</h1>
+        <p>Paragraph 1</p>
+        <p>Paragraph 2</p>
+        <p>Paragraph 3</p>
       </section>
     </main>
     <script></script>
