--- a/examples/31-box.html
+++ b/examples/31-box.html
@@ -6,18 +6,42 @@
 
     <title>Box Model</title>
     <style>
-    :root, body, h1 {
+    :root, body, h1, p {
       margin: 0;
       padding: 0;
     }
 
+    body {
+      width: 600px;
+      margin: 0 auto;
+    }
 
+    section {
+      width: 240px;
+      background-color: lightgray;
+      border-left: 10px solid gray;
+      padding-top: 50px;
+      padding-inline: 10px;
+      padding-block: 10px;
+      margin: 10px auto;
+      box-sizing: border-box;
+    }
+
+    p, h1 {
+      padding-block: 20px;
+    }
 
     </style>
   </head>
 
   <body>
     <main>
+      <section>
+        <h1>Heading</h1>
+        <p>Paragraph 1</p>
+        <p>Paragraph 2</p>
+        <p>Paragraph 3</p>
+      </section>
     </main>
     <script></script>
   </body>
