--- a/examples/32-sizing.html
+++ b/examples/32-sizing.html
@@ -6,6 +6,14 @@
 
     <title>Sizing</title>
     <style>
+    :root {
+      font-size: 24px;
+    }
+    
+    body {
+      width: min-content;
+      margin: 0 auto;
+    }
     </style>
   </head>
 
