--- a/examples/34-flexbox.html
+++ b/examples/34-flexbox.html
@@ -6,6 +6,24 @@
 
     <title>Flexbox</title>
     <style>
+    body {
+      max-width: 640px;
+      margin: 0 auto;
+    }
+
+    header {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 2em;
+    }
+
+    nav {
+      flex-grow: 1;
+      text-align: right;
+    }
     </style>
   </head>
 
@@ -13,9 +31,11 @@
     <header>
       <img src="https://upload.wikimedia.org/wikipedia/en/0/0d/Anderson_univ_indiana_seal.png" height=64 width="64">
       <h1>Anderson University</h1>
-      <a href="/visit">Visit</a>
-      <a href="/apply">Apply</a>
-      <a href="/give">Give</a>
+      <nav>
+        <a href="/visit">Visit</a>
+        <a href="/apply">Apply</a>
+        <a href="/give">Give</a>
+      </nav>
     </header>
     <article>
       <h2>Computer Science</h2>
