--- a/examples/35-grid.html
+++ b/examples/35-grid.html
@@ -13,6 +13,8 @@
       grid-template-areas:
         "aside article"
         "comments comments";
+      justify-items: end;
+      align-items: center;
     }
 
     main aside {
