Add hx-boost example

--- a/examples/36-htmx.html
+++ b/examples/36-htmx.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css" />
   </head>
 
-  <body>
+  <body hx-boost="true">
+    <header>
+      <nav>
+        <a href="/">Home</a>
+      </nav>
+    </header>
     <main>
       <section>
         <h2>Dice Roller</h2>
